# movies

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  config.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.kiro/specs/ascii-splash-screen/: design.md  (+3 more)
.kiro/steering/: api-usage.md  documentation.md  github-issues.md  menu-features.md  product.md  spec-management.md  structure.md  tech.md  testing.md
docs/: CONFIGURATION.md  PERFORMANCE.md  SECURITY_AUDIT.md  TROUBLESHOOTING.md
src/: buffer.rs  config.rs  database.rs  display.rs  dto.rs  episode_field.rs  handlers.rs  lib.rs  logger.rs  main.rs  menu.rs  path_resolver.rs  paths.rs  player_plugin.rs  progress_tracker.rs  scrollbar.rs  splash.rs  terminal.rs  theme.rs  torrent_search.rs  util.rs  video_metadata.rs
src/components/: browser.rs  category.rs  context_menu.rs  detail_panel.rs  episode.rs  episode_editor.rs  header.rs  metadata_display.rs  mod.rs  scrollbar.rs  series_creator.rs  series_select_window.rs  series_selector.rs  status_bar.rs
tests/: USER_ACCEPTANCE_SUMMARY.md  buffer_performance_tests.rs  buffer_tests.rs  components_tests.rs  config_tests.rs  detail_panel_tests.rs  display_tests.rs  draw_screen_buffer_tests.rs  episode_field_tests.rs  final_integration_tests.rs  integration_tests.rs  logger_tests.rs  menu_tests.rs  path_resolver_tests.rs  player_plugin_tests.rs  progress_tracker_tests.rs  scrollbar_equivalence_tests.rs  scrollbar_legacy_tests.rs  theme_tests.rs  torrent_search_tests.rs  util_tests.rs
(+147 files in other folders)
