[package]
name = "movies"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.23"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2.3"
rusqlite = { version = "0.26.0", features = ["bundled"] }
lazy_static = "1.4"
directories = "5.0"
matroska = "0.16"
mp4 = "0.14"
riff = "2.0"
chrono = "0.4"
unicode-width = "0.1"
md5 = "0.7"
dirs = "5.0"
magneto = "0.2"
tokio = { version = "1", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
tempfile = "3.0"
serial_test = "3.0"